fixed title on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,11 @@ a:hover, a:active {
 		width:100%;
 
 	}
+
+	.ui.stackable.grid > .row > .wide.column, .ui.stackable.grid > .wide.column, .ui.stackable.grid > .column.grid > .column, .ui.stackable.grid > .column.row > .column, .ui.stackable.grid > .row > .column, .ui.stackable.grid > .column{
+		margin:2.5rem 0em !important;
+
+	}
 }
 
 @media screen and (min-width: 769px) {
